// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render CDM project Sidebar 1`] = `
<div
  className="chooser-section col-xl-2 col-lg-3 col-md-3 col-sm-3"
>
  <div
    className="sidebar"
  >
    <ListItem
      key="Project Detailsitem"
      linkTo="/project/1234"
      pageName="Project Details"
      selected={false}
    />
    <ListItem
      key="Project Teamitem"
      linkTo="/team/1234"
      pageName="Project Team"
      selected={false}
    />
    <ListItem
      key="Inceptionitem"
      linkTo="/inception/1234"
      pageName="Inception"
      selected={false}
    />
    <ListItem
      key="Feasibilityitem"
      linkTo="/feasibility/1234"
      pageName="Feasibility"
      selected={false}
    />
    <ListItem
      key="Designitem"
      linkTo="/design/1234"
      pageName="Design"
      selected={false}
    />
    <ListItem
      key="Tenderitem"
      linkTo="/tender/1234"
      pageName="Tender"
      selected={false}
    />
    <ListItem
      key="Constructionitem"
      linkTo="/construction/1234"
      pageName="Construction"
      selected={false}
    />
    <ListItem
      key="Handoveritem"
      linkTo="/handover/1234"
      pageName="Handover"
      selected={false}
    />
    <ListItem
      key="Occupationitem"
      linkTo="/occupation/1234"
      pageName="Occupation"
      selected={true}
    />
    <ListItem
      key="Refurbishmentitem"
      linkTo="/refurbishment/1234"
      pageName="Refurbishment"
      selected={false}
    />
    <ListItem
      key="Testitem"
      linkTo="/test/1234"
      pageName="Test"
      selected={false}
    />
  </div>
</div>
`;

exports[`Should render DSHF project Sidebar 1`] = `
<div
  className="chooser-section col-xl-2 col-lg-3 col-md-3 col-sm-3"
>
  <div
    className="sidebar"
  >
    <ListItem
      key="Project Detailsitem"
      linkTo="/project/1234"
      pageName="Project Details"
      selected={false}
    />
    <ListItem
      key="Project Teamitem"
      linkTo="/team/1234"
      pageName="Project Team"
      selected={false}
    />
    <ListItem
      key="HSFitem"
      linkTo="/occupation/1234"
      pageName="HSF"
      selected={true}
    />
    <ListItem
      key="Testitem"
      linkTo="/test/1234"
      pageName="Test"
      selected={false}
    />
  </div>
</div>
`;
